# notified

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml  publish-test-pypi.yaml  pylint.yml
notified/: __main__.py  client.py  config.py  handlers.py  server.py
