[tool.poetry]
name = "notified"
version = "0.1.1"
description = ""
authors = ["Oleskii Osadchul <aleosd@gmail.com>"]
readme = "README.md"
packages = [{include = "notified"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
