[tool.poetry]
name = "notified"
version = "0.0.1-dev2"
description = "Simple pub/sub implementation using PostgreSQL events."
authors = ["Alex Osadchuk <alxosd@proton.me>"]
license = "Apache-2.0"
homepage = "https://github.com/aleosd/motified"
repository = "https://github.com/aleosd/notified"
documentation = "https://github.com/aleosd/notified"
readme = "README.md"
packages = [{include = "notified"}]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9"
nanos = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
ruff = "^0.8.1"
mypy = "^1.13.0"
types-psycopg2 = "^2.9.21.20241019"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
